# coding-exercises

./: .gitignore  CMakeLists.txt  README.md
Anagram/: Anagram.cpp  CMakeLists.txt
CheckSet/: CMakeLists.txt  CheckSetMain.cpp
CoupleFinder/: CMakeLists.txt  CoupleFinder.cpp
FindWords/: CMakeLists.txt  FindWords.cpp
GeneralChess/: CMakeLists.txt  GeneralChess.cpp
GrafixMask/: CMakeLists.txt  GrafixMask.cpp
KiloManX/: CMakeLists.txt  KiloManX.cpp
MinMax/: CMakeLists.txt  MinMaxMain.cpp
ProducerConsumer/: CMakeLists.txt  ProducerConsumerMain.cpp
QuickSort/: CMakeLists.txt
SetDifference/: CMakeLists.txt  SetDifference.cpp
Shuffle/: CMakeLists.txt  Shuffle.cpp
SimpleHash/: CMakeLists.txt  SimpleHash.h  SimpleHashMain.cpp
SkipList/: CMakeLists.txt  main.cpp  perftest.cpp  skiplist.h
SmartWorldToy/: CMakeLists.txt  SmartWorldToy.cpp
Spiral/: CMakeLists.txt  spiral.cpp
VariadicTemplate/: CMakeLists.txt  main.cpp  polynomial.h  stopwatch.h
