project(CodingExercises)
cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")

find_package(GTest)
include_directories(${GTEST_INCLUDE_DIRS})

if(UNIX)
find_package(Threads)
set(TEST_LIBRARIES ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
else(UNIX)
set(TEST_LIBRARIES ${GTEST_BOTH_LIBRARIES})
endif(UNIX)

add_subdirectory(SmartWorldToy)
add_subdirectory(SimpleHash)
add_subdirectory(GrafixMask)
add_subdirectory(GeneralChess)
add_subdirectory(VariadicTemplate)
add_subdirectory(KiloManX)
add_subdirectory(QuickSort)
add_subdirectory(Anagram)
add_subdirectory(Shuffle)
add_subdirectory(SkipList)
